retrieveUnpackaged/objects/Team_Assignment__c.object
<CustomObject>
    <description>Junction Object Between Award and Teams.</description>
    <fields>
        <fullName>Award__c</fullName>
        <description>MD relation with Award.</description>
        <label>Award</label>
        <referenceTo>Award__c</referenceTo>
        <relationshipLabel>Team Assignments</relationshipLabel>
        <relationshipName>Team_Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Campus_Arrival_Date__c</fullName>
        <description>The date selected must be greater than or equal to the &quot;Project Departure Date&quot; but less than or equal to “Agreement End Date” on the award record.</description>
        <label>Campus Arrival Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campus_Departure_Date__c</fullName>
        <label>Campus Departure Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_Transition__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this checkbox nullifies the &quot;Campus Arrival Date&quot; field.</description>
        <label>No Transition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Arrival_Date__c</fullName>
        <description>Date selected must be greater than or equal to the “Campus Departure Date ” for the team.</description>
        <label>Project Arrival Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Departure_Date__c</fullName>
        <description>The date selected must be greater than or equal to the &quot;Start Date&quot; but less than or equal to “Agreement End Date” on the award record.</description>
        <label>Project Departure Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Team_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup relation to Team object. .</description>
        <label>Team Name</label>
        <referenceTo>Team__c</referenceTo>
        <relationshipLabel>Team Assignments</relationshipLabel>
        <relationshipName>Team_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Team Assignment</label>
    <nameField>
        <displayFormat>TA-{00000000}</displayFormat>
        <label>Team Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Team Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Campus_Arrival_Date_1</fullName>
        <active>true</active>
        <description>Date selected must be greater than or equal to the &quot;Project Departure Date&quot;</description>
        <errorConditionFormula>Campus_Arrival_Date__c &lt;   Project_Departure_Date__c</errorConditionFormula>
        <errorDisplayField>Campus_Arrival_Date__c</errorDisplayField>
        <errorMessage>Date selected must be greater than or equal to the &quot;Project Departure Date&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Campus_Arrival_Date_2</fullName>
        <active>true</active>
        <description>Date selected less than or equal to “Agreement End Date” on the award record.</description>
        <errorConditionFormula>Campus_Arrival_Date__c &gt; Award__r.Project_End_Date__c</errorConditionFormula>
        <errorDisplayField>Campus_Arrival_Date__c</errorDisplayField>
        <errorMessage>Date should be less than or equal to “Agreement End Date” on the award record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Campus_Departure_Date</fullName>
        <active>true</active>
        <description>Date selected must be greater than or equal to the “Agreement Start Date” on the award record.</description>
        <errorConditionFormula>Campus_Departure_Date__c  &lt; Award__r.Project_Start_Date__c</errorConditionFormula>
        <errorDisplayField>Campus_Departure_Date__c</errorDisplayField>
        <errorMessage>Date selected must be greater than or equal to the “Agreement Start Date” on the award record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Project_Arrival_Date</fullName>
        <active>true</active>
        <description>Date selected must be greater than or equal to the “Campus Departure Date ” for the team.</description>
        <errorConditionFormula>Project_Arrival_Date__c &lt;  Campus_Departure_Date__c</errorConditionFormula>
        <errorDisplayField>Project_Arrival_Date__c</errorDisplayField>
        <errorMessage>Date must be Greater than or equal to Campus Departure Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Project_Departure_Date_1</fullName>
        <active>true</active>
        <description>Date selected must be greater than or equal to the &quot;Agreement Start Date&quot;.</description>
        <errorConditionFormula>Project_Departure_Date__c &lt;  Award__r.Project_Start_Date__c</errorConditionFormula>
        <errorDisplayField>Project_Departure_Date__c</errorDisplayField>
        <errorMessage>Date must be Greater than or equal to Agreement Start Date on Award record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Project_Departure_Date_2</fullName>
        <active>true</active>
        <description>Date selected must be less than or equal to the &quot;Agreement End Date&quot;.</description>
        <errorConditionFormula>Project_Departure_Date__c &gt;  Award__r.Project_End_Date__c</errorConditionFormula>
        <errorDisplayField>Project_Departure_Date__c</errorDisplayField>
        <errorMessage>Date must be Less than or equal to Agreement End Date on Award record.</errorMessage>
    </validationRules>
</CustomObject>